# Disable-Fast-Travel

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
data/: DisableFastTravel.ini
src/: Extensions.h  FastTravelManager.cpp  FastTravelManager.h  Hooks.cpp  Patches.cpp  Patches.h  Settings.cpp  Settings.h  main.cpp
